Change favicon from ico to png

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,4 +4,4 @@
 
 {% include head-custom-google-analytics.html %}
 
-<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png" />
