--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -2,4 +2,4 @@
 
 {% include head-custom-google-analytics.html %}
 
-<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png" />
+<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
