Update side links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <![endif]-->
     
     {% include head-custom-google-analytics.html %}
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/favicon.png" />
   </head>
   
   <body>
@@ -27,17 +27,17 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
-        Curriculum <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
+        <p> Curriculum <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
           <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="40" width="40" />
-        </a>
+        </a> </p>
         
-        LinkedIn <a href="https://www.linkedin.com/in/juniorsergio/">
+        <p> LinkedIn <a href="https://www.linkedin.com/in/juniorsergio/">
           <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="40" width="40" />
-        </a>
+        </a> </p>
         
-        GitHub <a href="https://github.com/juniorsergio/">
+        <p> GitHub <a href="https://github.com/juniorsergio/">
           <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
-        </a>
+        </a> </p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
