Align text with images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,15 +28,15 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         <p> Curriculum <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
-          <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="40" width="40" />
+          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="40" width="40" />
         </a> </p>
         
         <p> LinkedIn <a href="https://www.linkedin.com/in/juniorsergio/">
-          <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="40" width="40" />
+          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="40" width="40" />
         </a> </p>
         
         <p> GitHub <a href="https://github.com/juniorsergio/">
-          <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
+          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
         </a> </p>
 
         {% if site.github.is_project_page %}
