--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,17 +25,19 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
-        <p> Curriculum <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
-          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="40" width="40" />
-        </a> </p>
+        <p align=center>
+          <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
+            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="40" width="40" />
+          </a>
         
-        <p> LinkedIn <a href="https://www.linkedin.com/in/juniorsergio/">
-          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="40" width="40" />
-        </a> </p>
+          <a href="https://www.linkedin.com/in/juniorsergio/">
+            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="40" width="40" />
+          </a>
         
-        <p> GitHub <a href="https://github.com/juniorsergio/">
-          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
-        </a> </p>
+          <a href="https://github.com/juniorsergio/">
+            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
+          </a>
+        </p>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
