Remove unnecessary image style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,15 @@
         
         <p align=center>
           <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
-            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="40" width="40" />
+            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="40" width="40" />
           </a>
         
           <a href="https://www.linkedin.com/in/juniorsergio/">
-            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="40" width="40" />
+            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="40" width="40" />
           </a>
         
           <a href="https://github.com/juniorsergio/">
-            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
+            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
           </a>
         </p>
 
