Add localization and email

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,16 @@
             <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="40" width="40" />
           </a>
         </p>
+        
+        <p>
+          <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="16" width="16" />
+          Belo Horizonte, MG, Brazil
+        </p>
+        
+        <p>
+            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="16" width="16" />
+            <a href="mailto:{{ site.email }}">site.email</a>    
+        </p>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
