--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,13 +40,13 @@
         </p>
         
         <p>
-          <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="16" width="16" />
+          <img vertical-align=middle src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="20" width="20" />
           Belo Horizonte, MG, Brazil
         </p>
         
         <p>
-            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="16" width="16" />
-            <a href="mailto:{{ site.email }}">site.email</a>    
+            <img vertical-align=middle src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="20" width="20" />
+            <a href="mailto:{{ site.email }}">{{ site.email }}</a>    
         </p>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
