--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,12 @@
         </p>
         
         <p>
-          <img vertical-align=middle src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="20" width="20" />
+          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="20" width="20" />
           Belo Horizonte, MG, Brazil
         </p>
         
         <p>
-            <img vertical-align=middle src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="20" width="20" />
+            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="20" width="20" />
             <a href="mailto:{{ site.email }}">{{ site.email }}</a>    
         </p>
 
