Update linkedin language link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="50" width="50" />
           </a>
         
-          <a href="https://www.linkedin.com/in/juniorsergio/?locale={{ document.documentElement.lang }}">
+          <a href="https://www.linkedin.com/in/juniorsergio/" hreflang="{{ document.documentElement.lang }}">
             <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="50" width="50" />
           </a>
         
