--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en_US" }}">
+<html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +30,7 @@
             <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="50" width="50" />
           </a>
         
-          <a href="https://www.linkedin.com/in/juniorsergio/" hreflang="{{ document.documentElement.lang }}">
+          <a href="https://www.linkedin.com/in/juniorsergio/?locale=en_US">
             <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="50" width="50" />
           </a>
         
