--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@
   
   <body>
     <div class="wrapper">
-      <header>
+      <header style="width:400px">
         <h1 align="center"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         <h1 align="center">Data Science Portfolio</h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" style="width:250;height:250;float:center"/>
         {% endif %}
         
         <p align=center>
@@ -68,12 +68,12 @@
         </ul>
         {% endif %}
       </header>
-      <section>
+      <section style="width:630px">
 
       {{ content }}
 
       </section>
-      <footer>
+      <footer style="width:400px">
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
