--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sergio Junior</title>
-
 {% seo title=false %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -15,65 +14,28 @@
     {% include head-custom-google-analytics.html %}
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/favicon.png" />
   </head>
-  
+
   <body>
     <div class="wrapper">
-      <header style="width:400px">
+      <header>
         <h1 align="center"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         <h1 align="center">Data Science Portfolio</h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" style="width:250;height:250;float:center"/>
+          <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
-        
+
         <p align=center>
-          <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
-            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="50" width="50" />
-          </a>
-        
-          <a href="https://www.linkedin.com/in/juniorsergio/?locale=en_US">
-            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="50" width="50" />
-          </a>
-        
-          <a href="https://github.com/juniorsergio/">
-            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="50" width="50" />
-          </a>
-        </p>
-        
-        <p>
-          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="20" width="20" />
-          Belo Horizonte, MG, Brazil
-        </p>
-        
-        <p>
-            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="20" width="20" />
-            <a href="mailto:{{ site.email }}">{{ site.email }}</a>    
-        </p>
-
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+	@@ -68,12 +68,12 @@ <h1 align="center">Data Science Portfolio</h1>
         </ul>
         {% endif %}
       </header>
-      <section style="width:630px">
+      <section>
 
       {{ content }}
 
       </section>
-      <footer style="width:400px">
+      <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
