--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,40 @@
         {% endif %}
 
         <p align=center>
-	@@ -68,12 +68,12 @@ <h1 align="center">Data Science Portfolio</h1>
+          <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
+            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="50" width="50" />
+          </a>
+        
+          <a href="https://www.linkedin.com/in/juniorsergio/?locale=en_US">
+            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="50" width="50" />
+          </a>
+        
+          <a href="https://github.com/juniorsergio/">
+            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="50" width="50" />
+          </a>
+        </p>
+        
+        <p>
+          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="20" width="20" />
+          Belo Horizonte, MG, Brazil
+        </p>
+        
+        <p>
+            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="20" width="20" />
+            <a href="mailto:{{ site.email }}">{{ site.email }}</a>    
+        </p>
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        {% if site.github.is_project_page %}
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        {% endif %}
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
+        {% if site.show_downloads %}
+        <ul class="downloads">
+          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
       </header>
