Update profile picture size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <h1 align="center">Data Science Portfolio</h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <p align="center"><img src="/images/photo.jpg" alt="Logo" width="220" height="220"></p>
         {% endif %}
 
         <p align=center>
