--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,80 +1,24 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sergio Junior</title>
-{% seo title=false %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
-    
-    {% include head-custom-google-analytics.html %}
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/favicon.png" />
-  </head>
+  {% include head.html %}
 
   <body>
     <div class="wrapper">
-      <header>
-        <h1 align="center"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        <h1 align="center">Data Science Portfolio</h1>
+      
+      {% include header.html %}
 
-        {% if site.logo %}
-          <p align="center"><img src="/images/photo.jpg" alt="Logo" width="220" height="220"></p>
-        {% endif %}
-
-        <p align=center>
-          <a href="https://github.com/juniorsergio/portfolio/raw/master/files/SergioJunior_CV_English.pdf">
-            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/pdf.png" alt="Curriculum" height="50" width="50" />
-          </a>
-        
-          <a href="https://www.linkedin.com/in/juniorsergio/?locale=en_US">
-            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/linkedin.png" alt="LinkedIn" height="50" width="50" />
-          </a>
-        
-          <a href="https://github.com/juniorsergio/">
-            <img src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/github.png" alt="GitHub" height="50" width="50" />
-          </a>
-        </p>
-        
-        <p>
-          <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/localization.png" alt="Localization" height="20" width="20" />
-          Belo Horizonte, MG, Brazil
-        </p>
-        
-        <p>
-            <img style="vertical-align:middle" src="https://raw.githubusercontent.com/juniorsergio/Portfolio/master/images/email.png" alt="Email" height="20" width="20" />
-            <a href="mailto:{{ site.email }}">{{ site.email }}</a>    
-        </p>
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
-      </header>
       <section>
 
       {{ content }}
 
       </section>
+
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
+
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
+
 </html>
