Add images to projects

--- a/_includes/language.html
+++ b/_includes/language.html
@@ -1,7 +1,7 @@
 <p align="center">
 
 	{% if site.lang == "en_US" %}
-		<a href="https://juniorsergio.github.io/pt_BR"> Português </a>
+		<a href="https://juniorsergio.github.io/pt_BR/"> Português </a>
 		| English
 
 	{% else %}                
