--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -1,9 +1,9 @@
 <p align=center>
-  <a href="https://github.com/juniorsergio/portfolio/raw/master/files/{{ site.curriculum }}.pdf">
+  <a href="/assets/files/{{ page.curriculum }}.pdf">
     <img src="/assets/images/pdf.png" alt="Curriculum" height="50" width="50" />
   </a>
 
-  <a href="https://www.linkedin.com/in/juniorsergio/?locale={{ site.lang }}">
+  <a href="https://www.linkedin.com/in/juniorsergio/?locale={{ page.lang }}">
     <img src="/assets/images/linkedin.png" alt="LinkedIn" height="50" width="50" />
   </a>
 
@@ -14,7 +14,7 @@
 
 <p>
   <img style="vertical-align:middle" src="/assets/images/localization.png" alt="Localization" height="20" width="20" />
-  {{ site.localization }}
+  {{ page.localization }}
 </p>
 
 <p>
