--- a/_includes/language.html
+++ b/_includes/language.html
@@ -1,12 +1,12 @@
 <p align="center">
 
-	{% if site.lang == "en_US" %}
-		<a href="https://juniorsergio.github.io/pt_BR/"> Português </a>
+	{% if page.lang == "en_US" %}
+		<a href="http://https://juniorsergio.github.io/pt_BR/"> Português </a>
 		| English
 
 	{% else %}                
 		Português | 
-		<a href="https://juniorsergio.github.io/"> English </a>
+		<a href="http://https://juniorsergio.github.io/"> English </a>
 
 	{% endif %}
 
