--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,3 +29,46 @@ header, main {
         height: 90vh;
     }
 }
+
+ul {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    border: 1px solid var(--border);
+    border-radius: 15px;
+}
+  
+ul li {
+    flex: auto;
+    padding: 8px;
+
+    list-style: none;
+    text-align: center;
+    font-weight: bold;
+
+    cursor: pointer;
+    transition: all 0.7s;
+
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
+}
+
+ul li:nth-child(2) {
+    border-radius: 0;
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+ul li:hover {
+    background: rgba(50, 224, 196, 0.15);
+}
+
+ul li.active {
+    background: var(--border);
+    cursor: auto;
+}
