--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -24,7 +24,7 @@ h1 {
     height: 200px;
     width: 200px;
     
-    border: 3px solid var(--border);
+    border: 3px solid var(--purpleHighlight);
     border-radius: 9999px;
 }
 
