--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -25,7 +25,7 @@ h1 {
     width: 200px;
     
     border: 3px solid var(--purpleHighlight);
-    border-radius: 9999px;
+    border-radius: 100%;
 }
 
 .localization, .email {
